01-build-cluster/config/registry/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: http
